[Component:Share] Fix share text

--- a/src/scss/extensions/extensions.scss
+++ b/src/scss/extensions/extensions.scss
@@ -1,5 +1,5 @@
-// TODO move scrollbars etc to extensions
 @import 'animations';
+@import 'effects';
 @import 'aspect-ratio';
 @import 'scrollbars';
 @import 'cursor';
