--- a/theme/snippets/jumplink-article-list-item-view-magazine.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-magazine.liquid
@@ -107,7 +107,7 @@
       {% endif %}
       <hr>
       <p class="small font-weight-bold">
-        <rv-share title="{{ article.title }}" url="{{ article.url }}" text="Look at this story" label="Share this article">Share this article</rv-share>
+        <rv-share title="{{ article.title }}" url="{{ article.url }}" text="Look at this! 👀" label="Share this article">Share this article</rv-share>
           <span class="pl-3">{{ 'blogs.comments.with_count' | t: count: number_of_comments }}</span>
         {% unless showDetail %}
           {% if linkToArticle %}
