--- a/theme/snippets/jumplink-pagination.liquid
+++ b/theme/snippets/jumplink-pagination.liquid
@@ -42,7 +42,7 @@
       {% endcomment %}
 
       {% if paginate.next.is_link %}
-        <a class="cursor-pointer pt-5" rv-route='{"url": "{{ paginate.next.url }}{{ paginate_hash }}", "viewId": "{{ viewId }}", "removeAfterActivation": true}' aria-label="{{ 'snippets.jumplink-pagination.load_more' | t }}">
+        <a class="cursor-pointer pt-5" rv-route='{"url": "{{ paginate.next.url }}{{ paginate_hash }}", "viewId": "{{ viewId }}", "removeAfterActivation": true, "listenPopstate": false, "action": "append"}' aria-label="{{ 'snippets.jumplink-pagination.load_more' | t }}">
           <span>{{ 'snippets.jumplink-pagination.load_more' | t }} {{ viewId }}</span>
         </a>
       {% endif %}
