--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -1,5 +1,5 @@
-{% comment %} Navigation Desktop {% endcomment %}
-<div class="container-fluid fixed-top navbar-main pointer-events-none">
+{% comment %} Navigation Desktop TODO remove d-none d-lg-block {% endcomment %}
+<div class="container-fluid fixed-top navbar-main pointer-events-none d-none d-lg-block">
   {% comment %}
     SUBBAR
   {% endcomment %}
