--- a/theme/templates/page.legals.liquid
+++ b/theme/templates/page.legals.liquid
@@ -9,6 +9,7 @@
 </div>
 
 <div rv-view-static='{"url": "/pages/it-recht-widerruf"}'></div>
+<div rv-view-static='{"url": "/pages/privacy-settings"}'></div>
 <div rv-view-static='{"url": "/pages/it-recht-datenschutz"}'></div>
 <div rv-view-static='{"url": "/pages/it-recht-agb"}'></div>
 
