[Component:CookieBanner] Added cookie banner, seperate more sites for cookie infos etc

--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -1,14 +1,15 @@
-@import './shopify-linklist/shopify-linklist.component.scss';
-@import './shopify-filter/shopify-filter.component.scss';
-@import './shopify-cart/shopify-cart.component.scss';
-@import './shopify-cart-button/shopify-cart-button.component.scss';
-@import './shopify-comments-form/shopify-comments-form.component.scss';
-@import './shopify-login-form/shopify-login-form.component.scss';
-@import './shopify-product/shopify-product.component.scss';
-@import './shopify-product-item/shopify-product-item.component.scss';
-@import './share/share.component.scss';
-@import './icon/icon.component.scss';
-@import './newsletter/newsletter.component.scss';
-@import './instagram/instagram.component.scss';
-@import './instagram-scrollbar/instagram-scrollbar.component.scss';
-@import './debug-bar/debug-bar.component.scss';
+@import './shopify-linklist/shopify-linklist.component';
+@import './cookie-banner/cookie-banner.component';
+@import './shopify-filter/shopify-filter.component';
+@import './shopify-cart/shopify-cart.component';
+@import './shopify-cart-button/shopify-cart-button.component';
+@import './shopify-comments-form/shopify-comments-form.component';
+@import './shopify-login-form/shopify-login-form.component';
+@import './shopify-product/shopify-product.component';
+@import './shopify-product-item/shopify-product-item.component';
+@import './share/share.component';
+@import './icon/icon.component';
+@import './newsletter/newsletter.component';
+@import './instagram/instagram.component';
+@import './instagram-scrollbar/instagram-scrollbar.component';
+@import './debug-bar/debug-bar.component';
