--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -61,6 +61,8 @@
 
   {% include 'jumplink-debug-bar' %}
 
+  {% section 'cookie-banner' %}
+
   <script type="application/ld+json">
   {
     "@context": "http://schema.org",
