--- a/theme/snippets/jumplink-form-new-comment.liquid
+++ b/theme/snippets/jumplink-form-new-comment.liquid
@@ -62,7 +62,7 @@
         {{ 'legals.privacy_policy.checkbox_label_html' | t }}
       </label>
     </small>
-    <p class="mb-0"><small>{{ 'blogs.comments.required' | t }}</small></p>
+    <p class="mb-0"><small>{{ 'forms.required' | t }}</small></p>
     {% if blog.moderated? %}
       <p class="mb-0"><small>{{ 'blogs.comments.moderated' | t }}</small></p>
     {% endif %}
