--- a/theme/templates/page.legals.liquid
+++ b/theme/templates/page.legals.liquid
@@ -9,8 +9,10 @@
 </div>
 
 <div rv-view-static='{"url": "/pages/it-recht-widerruf"}'></div>
+<div rv-view-static='{"url": "/pages/revoke-form"}'></div>
 <div rv-view-static='{"url": "/pages/privacy-settings"}'></div>
 <div rv-view-static='{"url": "/pages/it-recht-datenschutz"}'></div>
+<div rv-view-static='{"url": "/pages/cookies"}'></div>
 <div rv-view-static='{"url": "/pages/it-recht-agb"}'></div>
 
 {% comment %} <div class="col-xs-12 col-md-8 offset-md-2 mt-4">
