--- a/theme/templates/page.returns-form.liquid
+++ b/theme/templates/page.returns-form.liquid
@@ -1,14 +1,17 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
   <div class="row pt-md-5">
+    {% unless page.title == blank %}
+        <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
+          <h2>{{ page.title }}</h2>
+        </div>
+    {% endunless %}
     {% unless page.content == blank %}
         <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
           {{ page.content }}
         </div>
     {% endunless %}
     <div class="col-12 col-md-8 offset-md-2 col-lg-6">
-      <p>
-        Please note that for deliveries outside of EU, you may be charged extra expenses including any import duties and taxes, and you will be responsible for these charges or fees imposed by the customs authorities of the destination country.
-      </p>
+      {% include 'jumplink-form-returns' %}
     </div>
   </div>
 </div>
