[Components:CookieBar] Smartphone optimisations, deactivate facebook pixel, fallbacks for tracking deactivation and more

--- a/theme/templates/page.cookies.liquid
+++ b/theme/templates/page.cookies.liquid
@@ -157,6 +157,38 @@
         </tbody>
       </table>
 
+      <h3>The Trade Desk</h3>
+      <p>
+        Informationen zur der von The Trade Desk verwendeten Technologie und zum Datenschutz finden Sie unter folgendem Link: <a href="http://thetradedesk.com/general/privacy-policy">http://thetradedesk.com/general/privacy-policy</a>        
+      </p>
+      <p>
+        Sie können der Datensammlung und -speicherung jederzeit mit Wirkung für die Zukunft unter nachstehendem Link widersprechen: <a href="http://www.adsrvr.org/">http://www.adsrvr.org/</a>
+      </p>
+      <table class="table table-borderless">
+        <tbody>
+          <tr>
+            <th>Cookie Name</th>
+            <th>Domain</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td><code><span>TDID</span></code></td>
+            <td>.adsrvr.org</td>
+            <td>The Trade Desk analytics.</td>
+          </tr>
+          <tr>
+            <td><code><span>TDCPM</span></code></td>
+            <td>.adsrvr.org</td>
+            <td>The Trade Desk analytics.</td>
+          </tr>
+          <tr>
+            <td><code><span>TTDOptOut</span></code></td>
+            <td>.adsrvr.org</td>
+            <td>The Trade Desk analytics.</td>
+          </tr>          
+        </tbody>
+      </table>
+
       <h3>Privacy Settings</h3>
       <p>
         To save your privacy settings we use the following cookies
@@ -176,9 +208,14 @@
             <td>Used to save the setting that you do not want tracking with Google Analytics.</td>
           </tr>
           <tr>
-            <td><code><span>ttd-disable-1fqgs22</span></code></td>
+            <td><code><span>TTDOptOut</span></code></td>
             <td>Used to save the setting that you do not want tracking with The Trade Desk.</td>
           </tr>
+          <tr>
+            <td><code><span>fb-pixel-is-disabled</span></code></td>
+            <td>Used to save the setting that you do not want tracking with Facebook Pixel.</td>
+          </tr>
+          
         </tbody>
       </table>
 
