--- a/src/ts/components/cookie-banner/cookie-banner.component.scss
+++ b/src/ts/components/cookie-banner/cookie-banner.component.scss
@@ -8,4 +8,5 @@ rv-cookie-banner {
   // TODO use variables?
   background-color: rgba(255,255,255,0.8);
   border-top: 1px solid #D9998F;
+  z-index: 1031;
 }
