--- a/theme/sections/cookie-banner.liquid
+++ b/theme/sections/cookie-banner.liquid
@@ -1,14 +1,19 @@
 <rv-cookie-banner>
   <div class="container-fluid" rv-show="show">
     <div class="row d-flex align-items-center">
-      <div class="col-auto">
+      <div class="col-auto d-none d-md-flex">
         <button class="btn btn-link d-flex align-items-center" rv-on-click="close">
           <rv-icon rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="16"></rv-icon>
         </button>
       </div>
-      <div class="col text-right d-flex align-items-center justify-content-end">
+      <div class="col-12 col-md text-md-right d-flex align-items-center justify-content-end pt-3 pt-md-0">
         <small>{{ 'content_html' | t: link1: section.settings.link1 }}</small>
+      </div>
+      <div class="col-12 col-md-auto text-right d-flex align-items-center justify-content-end pb-3 pb-md-0">
         <small><a href="{{ section.settings.link2 }}" class="px-3">{{ 'link-label' | t }}</a></small>
+        <button class="btn btn-link d-flex align-items-center d-flex d-md-none" rv-on-click="close">
+          <small>{{ 'close' | t }}</small>
+        </button>
         <button class="btn btn-link d-flex align-items-center" rv-on-click="accept">
           <small>{{ 'okay' | t }}</small>
         </button>
@@ -39,11 +44,13 @@
       "en": {
         "content_html": "Hey there, we use <a href=\"{{ link1 }}\">cookies</a> to improve our experience with our site.",
         "okay": "Okay",
+        "close": "Close",
         "link-label": "Change privacy settings"
       },
       "de": {
         "content_html": "Hey, wir verwenden <a href=\"{{ link1 }}\">Cookies</a> um deine Benutzererfahrung mit unserer Website zu verbessern.",
         "okay": "Okay",
+        "close": "Schließen",
         "link-label": "Datenschutzeinstellungen ändern"
       }
     }
