[Instagram] Use own shopify developer app to load instagram media

--- a/src/scss/_development.scss
+++ b/src/scss/_development.scss
@@ -1,12 +1,12 @@
-#page-instagram {
-  #layout-bottom {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-  }
-}
+// #page-instagram {
+//   #layout-bottom {
+//     position: fixed;
+//     width: 100%;
+//     bottom: 0;
+//   }
+// }
 
-// TODO remove me and implement instagram api!
-[href='/pages/fassbender'], .instagram-scrollbar {
-  display: none;
-}
+// // TODO remove me and implement instagram api!
+// [href='/pages/fassbender'], .instagram-scrollbar {
+//   display: none;
+// }
