--- a/theme/templates/page.instagram.liquid
+++ b/theme/templates/page.instagram.liquid
@@ -1,41 +1,3 @@
-{% comment %} 
-<div class="container-fluid pt-5">
-  <div class="row pt-md-5">
-    {% unless page.title == blank %}
-      <div class="col-12 col-md-10 offset-md-2 text-left">
-        <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
-      </div>
-    {% endunless %}
-
-    {% unless page.content == blank %}
-        <div class="col-12 col-md-10 offset-md-2 rte">
-        {{ page.content }}
-        </div>
-    {% endunless %}
-  </div>
-</div> {% endcomment %}
-
-
 <div class="container-fluid">
-  <rv-instagram>
-    <div class="row">
-      <div class="col-4 px-0 content-box ratio-1-1" rv-each-image="media.data" rv-class="image.media_type">
-        {% comment %} IMAGE {% endcomment %}
-        <img class="content" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
-
-        {% comment %} CAROUSEL_ALBUM {% endcomment %}
-        <img class="content" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
-        
-        {% comment %} VIDEO {% endcomment %}
-        <video class="content" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
-          <source rv-src="image.media_url" type="video/mp4">
-        Your browser does not support the video tag.
-        </video>
-
-        {% comment %} hover info {% endcomment %}
-        <div class="content caption d-none d-md-flex align-items-center" rv-text="image.caption">
-        </div>
-      </div>
-    </div>
-  </rv-instagram>
+  {% section 'instagram' %}
 </div>
