--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="{{'html.lang.code' |t}}">
 <head class="no-js">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
